--- a/style.css
+++ b/style.css
@@ -497,3 +497,43 @@ body{
     height: 5vh;
     width: auto;
 }
+
+.social-links{
+    display:flex;
+    position:absolute;
+    top:385vh;
+    right:5vw;
+    gap:2vw;
+    z-index:5;
+    list-style: none; 
+    padding: 0;    
+    margin: 0; 
+}
+
+.social-links img{
+    width:2.5vw;
+    height:auto;
+}
+
+.social-links li {
+    list-style: none; 
+}
+
+
+.footer-bottom {
+    background: black;
+    width: 100%;
+    height: 4vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20vw;   /* ← This creates spacing from left & right */
+    position: absolute;
+    top: 395vh;
+    color: white;
+    font-family: bahnschrift;
+    font-size: 0.8rem;
+    font-weight: 400;
+    box-sizing: border-box; /* important for padding handling */
+}
+
