--- a/contact-us.css
+++ b/contact-us.css
@@ -250,11 +250,9 @@ button:hover {
 
 /**/
 
-
-
 .footer{
     width:100%;
-    height:32vh;
+    height:39vh;
     position:absolute;
     top:120vh;
     background-color:#d9d9d9;
@@ -267,6 +265,7 @@ button:hover {
     font-family:bebas neue regular;
     position:absolute;
     padding:45px;
+    padding-left:80px;
     width:56vw;
     line-height:1.4;
 }
@@ -297,4 +296,43 @@ button:hover {
 .footer-text-right3 img {
     height: 5vh;
     width: auto;
+}
+
+.social-links{
+    display:flex;
+    position:absolute;
+    top:152vh;
+    right:5vw;
+    gap:2vw;
+    z-index:5;
+    list-style: none; 
+    padding: 0;    
+    margin: 0; 
+}
+
+.social-links img{
+    width:2.5vw;
+    height:auto;
+}
+
+.social-links li {
+    list-style: none; 
+}
+
+
+.footer-bottom {
+    background: black;
+    width: 100%;
+    height: 4vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20vw;   /* ← This creates spacing from left & right */
+    position: absolute;
+    top: 159vh;
+    color: white;
+    font-family: bahnschrift;
+    font-size: 0.8rem;
+    font-weight: 400;
+    box-sizing: border-box; /* important for padding handling */
 }
